tests/prefix.out
hello
^ Parse error.
foo
^ Parse error.
