tests/prefix.norm
(foo bar|foo baz|hello (a|b|there (me|you)))
